@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
 #
 
+2004-12-21 21:13:57 GMT	John Goerzen <jgoerzen@complete.org>	patch-135
+
+    Summary:
+      Checkpointing
+    Revision:
+      missingh--head--0.7--patch-135
+
+
+    modified files:
+     ChangeLog libsrc/MissingH/Network/FTP/Server.hs
+
+
 2004-12-21 20:53:36 GMT	John Goerzen <jgoerzen@complete.org>	patch-134
 
     Summary:
